--- a/driving_simulator.html
+++ b/driving_simulator.html
@@ -10,15 +10,15 @@
     <meta name="twitter:title" content="BlaXrew Studios">
     <meta name="description" content="Software, Games &amp; More">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="assets/img/image0005%20-%20Kopie.png">
-    <meta name="twitter:image" content="assets/img/image0005%20-%20Kopie.png">
-    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
-    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
-    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
-    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
-    <link rel="icon" type="image/png" sizes="2000x2000" href="assets/img/BXS%20NON%20TRANSPARENT%20TEXT.png">
+    <meta property="og:image" content="assets/img/BXS_Logo/image0005%20-%20Kopie.png">
+    <meta name="twitter:image" content="assets/img/BXS_Logo/image0005%20-%20Kopie.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS_Logo/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS_Logo/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS_Logo/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS_Logo/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="2000x2000" href="assets/img/BXS_Logo/BXS%20NON%20TRANSPARENT%20TEXT.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
@@ -57,7 +57,7 @@
 <body onload="">
     <div class="footer-dark">
         <nav class="navbar navbar-dark navbar-expand-md bg-dark navigation-clean-button">
-            <div class="container"><img src="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png" width="5%" style="opacity: 1;margin-right: 0.5%;"><a class="navbar-brand" href="#">BlaXrew Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="container"><img src="assets/img/BXS_Logo/BXS%20TRANSPARENT%20NON%20TEXT.png" width="5%" style="opacity: 1;margin-right: 0.5%;"><a class="navbar-brand" href="#">BlaXrew Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navcol-2">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
@@ -141,12 +141,12 @@
     <div class="bg-dark m-auto simple-slider">
         <div class="bg-dark m-auto swiper-container">
             <div class="bg-dark m-auto swiper-wrapper">
-                <div class="bg-dark d-flex justify-content-center align-items-center align-content-center my-auto swiper-slide"><img class="my-auto" src="assets/img/dsfs.png" style="height: 100%;"></div>
-                <div class="bg-dark d-flex justify-content-center align-items-center align-content-center my-auto swiper-slide"><img class="my-auto" src="assets/img/Main.png" style="height: 100%;"></div>
-                <div class="bg-dark d-flex justify-content-center align-items-center align-content-center my-auto swiper-slide"><img class="my-auto" src="assets/img/2.png" style="height: 100%;"></div>
-                <div class="bg-dark d-flex justify-content-center align-items-center align-content-center my-auto swiper-slide"><img class="my-auto" src="assets/img/Capture.png" style="height: 100%;"></div>
-                <div class="bg-dark d-flex justify-content-center align-items-center align-content-center my-auto swiper-slide"><img class="my-auto" src="assets/img/fvd,ljsluighbnjsgn.png" style="height: 100%;"></div>
-                <div class="bg-dark d-flex justify-content-center align-items-center align-content-center my-auto swiper-slide"><img class="my-auto" src="assets/img/Captadgfyfgjure.png" style="height: 100%;"></div>
+                <div class="bg-dark d-flex justify-content-center align-items-center align-content-center my-auto swiper-slide"><img class="my-auto" src="assets/img/Driving_Simulator/dsfs.png" style="height: 100%;"></div>
+                <div class="bg-dark d-flex justify-content-center align-items-center align-content-center my-auto swiper-slide"><img class="my-auto" src="assets/img/Driving_Simulator/Main.png" style="height: 100%;"></div>
+                <div class="bg-dark d-flex justify-content-center align-items-center align-content-center my-auto swiper-slide"><img class="my-auto" src="assets/img/Driving_Simulator/2.png" style="height: 100%;"></div>
+                <div class="bg-dark d-flex justify-content-center align-items-center align-content-center my-auto swiper-slide"><img class="my-auto" src="assets/img/Driving_Simulator/Capture.png" style="height: 100%;"></div>
+                <div class="bg-dark d-flex justify-content-center align-items-center align-content-center my-auto swiper-slide"><img class="my-auto" src="assets/img/Driving_Simulator/fvd,ljsluighbnjsgn.png" style="height: 100%;"></div>
+                <div class="bg-dark d-flex justify-content-center align-items-center align-content-center my-auto swiper-slide"><img class="my-auto" src="assets/img/Driving_Simulator/Captadgfyfgjure.png" style="height: 100%;"></div>
             </div>
             <div class="swiper-pagination"></div>
             <div class="swiper-button-prev"></div>
@@ -197,7 +197,7 @@
             </div>
             <div class="row articles">
                 <div class="col-sm-6 col-md-4 item"><a href="#"></a><a data-toggle="tooltip" data-bss-tooltip="" class="action" href="https://www.dropbox.com/s/4u08kus4v6k8a4w/Devils%20Hunt%20Launcher%20Setup%201.1.exe?dl=1" title="Download"></a><a class="action" href="https://www.dropbox.com/s/4u08kus4v6k8a4w/Devils%20Hunt%20Launcher%20Setup%201.1.exe?dl=1"></a></div>
-                <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png"></a>
+                <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/BXS_Logo/image0005%20-%20Kopie.png"></a>
                     <h3 class="name">Driving Simulator</h3>
                     <p class="text-white-50 description">Download and get to it. Drive try for try and get better. Try it with connecting your TMX Pro to get a better result<br></p><a data-toggle="tooltip" data-bss-tooltip="" class="action" href="https://dl.patchkit.net/d/7gimxx37pbdtjujqu8mmo" title="Buy for $∞"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none">
                             <path d="M11 5C11 4.44772 11.4477 4 12 4C12.5523 4 13 4.44772 13 5V12.1578L16.2428 8.91501L17.657 10.3292L12.0001 15.9861L6.34326 10.3292L7.75748 8.91501L11 12.1575V5Z" fill="currentColor"></path>
@@ -236,7 +236,7 @@
                     </div>
                     <div class="col item social"><a href="http://twitter.com/blaxrew"><i class="icon ion-social-twitter"></i></a><a href="https://www.youtube.com/channel/UChOC9uRCoD2-5hzFGEnnOJA"><i class="icon ion-social-youtube"></i></a><a href="http://github.com/blaxrewstudios"><i class="icon ion-social-github"></i></a><a href="https://steamcommunity.com/groups/blaxrew-studios"><i class="fab fa-steam-symbol"></i></a><a href="https://discord.com/invite/ySRCsyW"><i class="fab fa-discord"></i></a><a href="mailto:blaxrewstudios.official@gmail.com"><i class="icon ion-ios-email"></i></a></div>
                 </div>
-                <p class="copyright">BlaXrew Studios © 2015-2021</p>
+                <p class="copyright">BlaXrew Studios © 2015-2022</p>
             </div>
         </footer>
     </div>
