--- a/impressum.html
+++ b/impressum.html
@@ -10,15 +10,15 @@
     <meta name="twitter:title" content="BlaXrew Studios">
     <meta name="description" content="Software, Games &amp; More">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="assets/img/image0005%20-%20Kopie.png">
-    <meta name="twitter:image" content="assets/img/image0005%20-%20Kopie.png">
-    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
-    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
-    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
-    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
-    <link rel="icon" type="image/png" sizes="2000x2000" href="assets/img/BXS%20NON%20TRANSPARENT%20TEXT.png">
+    <meta property="og:image" content="assets/img/BXS_Logo/image0005%20-%20Kopie.png">
+    <meta name="twitter:image" content="assets/img/BXS_Logo/image0005%20-%20Kopie.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS_Logo/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS_Logo/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS_Logo/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS_Logo/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="2000x2000" href="assets/img/BXS_Logo/BXS%20NON%20TRANSPARENT%20TEXT.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
@@ -57,7 +57,7 @@
 <body>
     <div class="footer-dark">
         <nav class="navbar navbar-dark navbar-expand-md bg-dark navigation-clean-button">
-            <div class="container"><img src="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png" width="5%" style="opacity: 1;margin-right: 0.5%;"><a class="navbar-brand" href="#">BlaXrew Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="container"><img src="assets/img/BXS_Logo/BXS%20TRANSPARENT%20NON%20TEXT.png" width="5%" style="opacity: 1;margin-right: 0.5%;"><a class="navbar-brand" href="#">BlaXrew Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navcol-2">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
@@ -140,7 +140,7 @@ Website Impressum erstellt durch <a href="https://www.impressum-generator.de">im
                     </div>
                     <div class="col item social"><a href="http://twitter.com/blaxrew"><i class="icon ion-social-twitter"></i></a><a href="https://www.youtube.com/channel/UChOC9uRCoD2-5hzFGEnnOJA"><i class="icon ion-social-youtube"></i></a><a href="http://github.com/blaxrewstudios"><i class="icon ion-social-github"></i></a><a href="https://steamcommunity.com/groups/blaxrew-studios"><i class="fab fa-steam-symbol"></i></a><a href="https://discord.com/invite/ySRCsyW"><i class="fab fa-discord"></i></a><a href="mailto:blaxrewstudios.official@gmail.com"><i class="icon ion-ios-email"></i></a></div>
                 </div>
-                <p class="copyright">BlaXrew Studios © 2015-2021</p>
+                <p class="copyright">BlaXrew Studios © 2015-2022</p>
             </div>
         </footer>
     </div>
