--- a/las.html
+++ b/las.html
@@ -10,15 +10,15 @@
     <meta name="twitter:title" content="BlaXrew Studios">
     <meta name="description" content="Software, Games &amp; More">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="assets/img/image0005%20-%20Kopie.png">
-    <meta name="twitter:image" content="assets/img/image0005%20-%20Kopie.png">
-    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
-    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
-    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
-    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
-    <link rel="icon" type="image/png" sizes="2000x2000" href="assets/img/BXS%20NON%20TRANSPARENT%20TEXT.png">
+    <meta property="og:image" content="assets/img/BXS_Logo/image0005%20-%20Kopie.png">
+    <meta name="twitter:image" content="assets/img/BXS_Logo/image0005%20-%20Kopie.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS_Logo/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS_Logo/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS_Logo/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS_Logo/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="2000x2000" href="assets/img/BXS_Logo/BXS%20NON%20TRANSPARENT%20TEXT.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
@@ -57,7 +57,7 @@
 <body onload="SetDate(&quot;&quot;)">
     <div class="footer-dark">
         <nav class="navbar navbar-dark navbar-expand-md bg-dark navigation-clean-button">
-            <div class="container"><img src="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png" width="5%" style="opacity: 1;margin-right: 0.5%;"><a class="navbar-brand" href="#">BlaXrew Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="container"><img src="assets/img/BXS_Logo/BXS%20TRANSPARENT%20NON%20TEXT.png" width="5%" style="opacity: 1;margin-right: 0.5%;"><a class="navbar-brand" href="#">BlaXrew Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navcol-2">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
@@ -111,10 +111,12 @@
     <div class="simple-slider">
         <div class="swiper-container">
             <div class="swiper-wrapper">
-                <div class="bg-dark swiper-slide"><img src="assets/img/Banner%201%201920x1080.png" style="background: url(&quot;assets/img/image0005%20-%20Kopie_222.jpg&quot;);width: 66%;margin-left: 17.5%;"></div>
-                <div class="bg-dark swiper-slide" style="background-image:url(https://placeholdit.imgix.net/~text?txtsize=68&amp;txt=Slideshow+Image&amp;w=1920&amp;h=500);"><img src="assets/img/grafik.png" style="width: 50%;margin-left: 25%;background: url(&quot;assets/img/image0005%20-%20Kopie_222.jpg&quot;);"></div>
-                <div class="bg-dark swiper-slide" style="background-image:url(https://placeholdit.imgix.net/~text?txtsize=68&amp;txt=Slideshow+Image&amp;w=1920&amp;h=500);"><img src="assets/img/banner-907x510.png" style="width: 50%;margin-left: 25%;background: url(&quot;assets/img/image0005%20-%20Kopie_222.jpg&quot;);"></div>
-                <div class="bg-dark swiper-slide" style="background-image:url(https://placeholdit.imgix.net/~text?txtsize=68&amp;txt=Slideshow+Image&amp;w=1920&amp;h=500);"><img src="assets/img/lula.png" style="width: 50%;margin-left: 25%;background: url(&quot;assets/img/image0005%20-%20Kopie_222.jpg&quot;);"></div>
+                <div class="bg-dark swiper-slide"><img src="assets/img/LaS/Banner%201%201920x1080.png" style="background: url(&quot;assets/img/BXS_Logo/image0005%20-%20Kopie_222.jpg&quot;);width: 66%;margin-left: 17.5%;"></div>
+                <div class="bg-dark swiper-slide" style="background-image:url(https://placeholdit.imgix.net/~text?txtsize=68&amp;txt=Slideshow+Image&amp;w=1920&amp;h=500);"><img src="assets/img/LaS/grafik.png" style="width: 50%;margin-left: 25%;background: url(&quot;assets/img/BXS_Logo/image0005%20-%20Kopie_222.jpg&quot;);"></div>
+                <div class="bg-dark swiper-slide" style="background-image:url(https://placeholdit.imgix.net/~text?txtsize=68&amp;txt=Slideshow+Image&amp;w=1920&amp;h=500);"><img src="assets/img/LaS/banner-907x510.png" style="width: 50%;margin-left: 25%;background: url(&quot;assets/img/BXS_Logo/image0005%20-%20Kopie_222.jpg&quot;);"></div>
+                <div class="bg-dark swiper-slide" style="background-image:url(https://placeholdit.imgix.net/~text?txtsize=68&amp;txt=Slideshow+Image&amp;w=1920&amp;h=500);"><img src="assets/img/LaS/lula.png" style="width: 50%;margin-left: 25%;background: url(&quot;assets/img/BXS_Logo/image0005%20-%20Kopie_222.jpg&quot;);"></div>
+                <div class="bg-dark swiper-slide" style="background-image:url(https://placeholdit.imgix.net/~text?txtsize=68&amp;txt=Slideshow+Image&amp;w=1920&amp;h=500);"><img src="assets/img/LaS/T1.png" style="width: 50%;margin-left: 25%;background: url(&quot;assets/img/BXS_Logo/image0005%20-%20Kopie_222.jpg&quot;);"></div>
+                <div class="bg-dark swiper-slide" style="background-image:url(https://placeholdit.imgix.net/~text?txtsize=68&amp;txt=Slideshow+Image&amp;w=1920&amp;h=500);"><img src="assets/img/LaS/T2.png" style="width: 50%;margin-left: 25%;background: url(&quot;assets/img/BXS_Logo/image0005%20-%20Kopie_222.jpg&quot;);"></div>
             </div>
             <div class="swiper-pagination"></div>
             <div class="swiper-button-prev"></div>
@@ -198,7 +200,7 @@
             </div>
             <div class="row articles">
                 <div class="col-sm-6 col-md-4 item"><a href="#"></a><a data-toggle="tooltip" data-bss-tooltip="" class="action" href="https://www.dropbox.com/s/4u08kus4v6k8a4w/Devils%20Hunt%20Launcher%20Setup%201.1.exe?dl=1" title="Download"></a><a class="action" href="https://www.dropbox.com/s/4u08kus4v6k8a4w/Devils%20Hunt%20Launcher%20Setup%201.1.exe?dl=1"></a></div>
-                <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/Banner%201%201920x1080.png"></a>
+                <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/LaS/Banner%201%201920x1080.png"></a>
                     <h3 class="name">Lights And Shadows</h3>
                     <p class="text-white-50 description">The main game with it's content is already playable for testers. Click on the download symbol below to go to the download of Lights And Shadows</p><a data-toggle="tooltip" data-bss-tooltip="" class="action" href="https://bxs-admin.herokuapp.com" title="Buy for $∞"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none">
                             <path d="M11 5C11 4.44772 11.4477 4 12 4C12.5523 4 13 4.44772 13 5V12.1578L16.2428 8.91501L17.657 10.3292L12.0001 15.9861L6.34326 10.3292L7.75748 8.91501L11 12.1575V5Z" fill="currentColor"></path>
@@ -237,7 +239,7 @@
                     </div>
                     <div class="col item social"><a href="http://twitter.com/blaxrew"><i class="icon ion-social-twitter"></i></a><a href="https://www.youtube.com/channel/UChOC9uRCoD2-5hzFGEnnOJA"><i class="icon ion-social-youtube"></i></a><a href="http://github.com/blaxrewstudios"><i class="icon ion-social-github"></i></a><a href="https://steamcommunity.com/groups/blaxrew-studios"><i class="fab fa-steam-symbol"></i></a><a href="https://discord.com/invite/ySRCsyW"><i class="fab fa-discord"></i></a><a href="mailto:blaxrewstudios.official@gmail.com"><i class="icon ion-ios-email"></i></a></div>
                 </div>
-                <p class="copyright">BlaXrew Studios © 2015-2021</p>
+                <p class="copyright">BlaXrew Studios © 2015-2022</p>
             </div>
         </footer>
     </div>
