--- a/projects.html
+++ b/projects.html
@@ -10,15 +10,15 @@
     <meta name="twitter:title" content="BlaXrew Studios">
     <meta name="description" content="Software, Games &amp; More">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="assets/img/image0005%20-%20Kopie.png">
-    <meta name="twitter:image" content="assets/img/image0005%20-%20Kopie.png">
-    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
-    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
-    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
-    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
-    <link rel="icon" type="image/png" sizes="2000x2000" href="assets/img/BXS%20NON%20TRANSPARENT%20TEXT.png">
+    <meta property="og:image" content="assets/img/BXS_Logo/image0005%20-%20Kopie.png">
+    <meta name="twitter:image" content="assets/img/BXS_Logo/image0005%20-%20Kopie.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS_Logo/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS_Logo/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS_Logo/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS_Logo/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="2000x2000" href="assets/img/BXS_Logo/BXS%20NON%20TRANSPARENT%20TEXT.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
@@ -57,7 +57,7 @@
 <body>
     <div class="footer-dark">
         <nav class="navbar navbar-dark navbar-expand-md bg-dark navigation-clean-button">
-            <div class="container"><img src="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png" width="5%" style="opacity: 1;margin-right: 0.5%;"><a class="navbar-brand" href="#">BlaXrew Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="container"><img src="assets/img/BXS_Logo/BXS%20TRANSPARENT%20NON%20TEXT.png" width="5%" style="opacity: 1;margin-right: 0.5%;"><a class="navbar-brand" href="#">BlaXrew Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navcol-2">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
@@ -89,7 +89,7 @@
             <div class="row projects">
                 <div class="col-sm-6 item">
                     <div class="row">
-                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image005.png"></a></div>
+                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/Devils_Hunt/image005.png"></a></div>
                         <div class="col">
                             <h3 class="name">Devils Hunt</h3>
                             <p class="text-white-50 description">A software related boardgame<br>(Multiplayer, Singleplayer, Realife boardgame)<br></p><a class="btn btn-outline-primary btn-block btn-sm" role="button" style="margin-top: 5px;margin-left: 0px;" href="devils-hunt.html">Learn More</a>
@@ -98,7 +98,7 @@
                 </div>
                 <div class="col-sm-6 item">
                     <div class="row">
-                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 10px;"></a></div>
+                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/BXS_Logo/image0005%20-%20Kopie.png" style="margin-top: 10px;"></a></div>
                         <div class="col">
                             <h3 class="name">Fallen World</h3>
                             <p class="text-white-50 description">A 3D story game (planned with RTX). This game includes a time paradox and an invasion<br></p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;margin-bottom: 10px;margin-left: 0px;">Learn More</button>
@@ -107,7 +107,7 @@
                 </div>
                 <div class="col-sm-6 item">
                     <div class="row">
-                        <div class="col-md-12 col-lg-5"><a href="#"></a><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 15px;"></div>
+                        <div class="col-md-12 col-lg-5"><a href="#"></a><img class="img-fluid" src="assets/img/BXS_Logo/image0005%20-%20Kopie.png" style="margin-top: 15px;"></div>
                         <div class="col">
                             <h3 class="name">The Invaders</h3>
                             <p class="text-white-50 description">The Invaders is about exploring and invading worlds in teams of equal size.<br></p><a class="btn btn-outline-primary btn-block btn-sm" role="button" style="margin-top: 5px;margin-left: 0px;" href="las.html">Learn More</a>
@@ -116,16 +116,16 @@
                 </div>
                 <div class="col-sm-6 item">
                     <div class="row">
-                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 15px;"></a></div>
+                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/BXS_Logo/image0005%20-%20Kopie.png" style="margin-top: 15px;"></a></div>
                         <div class="col">
                             <h3 class="name">Trix Pong</h3>
-                            <p class="text-white-50 description">This is a game completely developed by H4rdw4r3. It is a mini soccer game<br></p><button class="btn btn-outline-primary disabled btn-block btn-sm" type="button" style="margin-top: 5px;margin-left: 0px;" disabled="">Learn More</button>
+                            <p class="text-white-50 description">This is a game completely developed by H4rdw4r3. It is a mini soccer game<br></p><button class="btn btn-outline-primary btn-block btn-sm disabled" type="button" style="margin-top: 5px;margin-left: 0px;" disabled="">Learn More</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 item">
                     <div class="row">
-                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 15px;"></a></div>
+                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/BXS_Logo/image0005%20-%20Kopie.png" style="margin-top: 15px;"></a></div>
                         <div class="col">
                             <h3 class="name">Filming Project</h3>
                             <p class="text-white-50 description">You only get access to it on request. Because it is only available for a group of persons<br></p><a class="btn btn-outline-primary btn-block btn-sm" role="button" style="margin-top: 5px;margin-left: 0px;" href="about.html#contact">Contact us</a>
@@ -134,7 +134,7 @@
                 </div>
                 <div class="col-sm-6 item">
                     <div class="row">
-                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/Unbenannt.png"></a></div>
+                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/MDScript_Thumb.png"></a></div>
                         <div class="col">
                             <h3 class="name">MD Script</h3>
                             <p class="text-white-50 description">This is called minecraft datapack script and is build to visualize and simplify the datapack creation<br></p><a class="btn btn-outline-primary btn-block btn-sm" role="button" style="margin-top: 5px;margin-bottom: 10px;margin-left: 0px;" href="https://blackture.github.io/mdscript/">Learn More</a>
@@ -143,7 +143,7 @@
                 </div>
                 <div class="col-sm-6 item">
                     <div class="row">
-                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 15px;"></a></div>
+                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/BXS_Logo/image0005%20-%20Kopie.png" style="margin-top: 15px;"></a></div>
                         <div class="col">
                             <h3 class="name">RCB</h3>
                             <p class="text-white-50 description">Random Characteristics Battle is a minigame built in the Windows Command Prompt</p><a class="btn btn-outline-primary btn-block btn-sm" role="button" style="margin-top: 5px;margin-left: 0px;" href="https://github.com/blaxrewstudios/RCB">Learn More</a>
@@ -152,7 +152,7 @@
                 </div>
                 <div class="col-sm-6 item">
                     <div class="row">
-                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 15px;"></a></div>
+                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/BXS_Logo/image0005%20-%20Kopie.png" style="margin-top: 15px;"></a></div>
                         <div class="col">
                             <h3 class="name">Driving Simulator</h3>
                             <p class="text-white-50 description">A driving simulator to train to drive with trailer.&nbsp;</p><a class="btn btn-outline-primary btn-block btn-sm" role="button" style="margin-top: 5px;margin-left: 0px;" href="driving_simulator.html">Learn More</a>
@@ -161,7 +161,7 @@
                 </div>
                 <div class="col-sm-6 item">
                     <div class="row">
-                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 15px;"></a></div>
+                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/BXS_Logo/image0005%20-%20Kopie.png" style="margin-top: 15px;"></a></div>
                         <div class="col">
                             <h3 class="name">Music</h3>
                             <p class="text-white-50 description">Our music compositions. Created for games, movies or just for listening</p><a class="btn btn-outline-primary btn-block btn-sm" role="button" style="margin-top: 5px;margin-left: 0px;" href="music_lib.html">Learn More</a>
@@ -200,7 +200,7 @@
                     </div>
                     <div class="col item social"><a href="http://twitter.com/blaxrew"><i class="icon ion-social-twitter"></i></a><a href="https://www.youtube.com/channel/UChOC9uRCoD2-5hzFGEnnOJA"><i class="icon ion-social-youtube"></i></a><a href="http://github.com/blaxrewstudios"><i class="icon ion-social-github"></i></a><a href="https://steamcommunity.com/groups/blaxrew-studios"><i class="fab fa-steam-symbol"></i></a><a href="https://discord.com/invite/ySRCsyW"><i class="fab fa-discord"></i></a><a href="mailto:blaxrewstudios.official@gmail.com"><i class="icon ion-ios-email"></i></a></div>
                 </div>
-                <p class="copyright">BlaXrew Studios © 2015-2021</p>
+                <p class="copyright">BlaXrew Studios © 2015-2022</p>
             </div>
         </footer>
     </div>
