--- a/about.html
+++ b/about.html
@@ -10,15 +10,15 @@
     <meta name="twitter:title" content="BlaXrew Studios">
     <meta name="description" content="Software, Games &amp; More">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="assets/img/image0005%20-%20Kopie.png">
-    <meta name="twitter:image" content="assets/img/image0005%20-%20Kopie.png">
-    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
-    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
-    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
-    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png">
-    <link rel="icon" type="image/png" sizes="2000x2000" href="assets/img/BXS%20NON%20TRANSPARENT%20TEXT.png">
+    <meta property="og:image" content="assets/img/BXS_Logo/image0005%20-%20Kopie.png">
+    <meta name="twitter:image" content="assets/img/BXS_Logo/image0005%20-%20Kopie.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS_Logo/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS_Logo/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS_Logo/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="1500x1500" href="assets/img/BXS_Logo/BXS%20TRANSPARENT%20NON%20TEXT.png">
+    <link rel="icon" type="image/png" sizes="2000x2000" href="assets/img/BXS_Logo/BXS%20NON%20TRANSPARENT%20TEXT.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
@@ -57,7 +57,7 @@
 <body>
     <div class="footer-dark">
         <nav class="navbar navbar-dark navbar-expand-md bg-dark navigation-clean-button">
-            <div class="container"><img src="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png" width="5%" style="opacity: 1;margin-right: 0.5%;"><a class="navbar-brand" href="#">BlaXrew Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="container"><img src="assets/img/BXS_Logo/BXS%20TRANSPARENT%20NON%20TEXT.png" width="5%" style="opacity: 1;margin-right: 0.5%;"><a class="navbar-brand" href="#">BlaXrew Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navcol-2">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
@@ -85,7 +85,7 @@
             <div class="row">
                 <div class="col">
                     <h2 class="text-white">About us</h2>
-                    <p class="text-white-50" style="color: var(--blue);">Were a small team producing Software, Games, Music, Videos, Movies and other stuff. Many software projects are open source and available on github. If you want to learn more about our projects click&nbsp;<a href="projects.html">here</a>.<br></p>
+                    <p class="text-white-50" style="color: var(--blue);">We're a small team producing Software, Games, Music, Videos, Movies and other stuff. Many software projects are open source and available on github. If you want to learn more about our projects click&nbsp;<a href="projects.html">here</a>.<br></p>
                     <h2 class="text-white">Careers</h2>
                     <p class="text-white-50">If you think you are the right one and want to apply fill in the form below&nbsp;or send an email to blaxrew.studios@gmail.com with the subject "Application"&nbsp;to apply. We are not&nbsp;training you. When you apply and we accept, we&nbsp;are going to test if you fit to the rest of the team. This is an unpaid job, that means you will not gain any money at the moment if&nbsp;you are part of the team.</p>
                 </div>
@@ -97,7 +97,7 @@
             <h2 class="text-center text-white" style="padding: 10px;">Contact us</h2>
             <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Name"></div><input class="border-dark form-control is-invalid" type="email" name="email" placeholder="Email" inputmode="email" style="margin-bottom: 15px;" required="" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[A-Za-z]{2,4}"><input class="form-control" type="text" name="subject" placeholder="Subject" style="margin-bottom: 15px;">
             <div class="form-group"><textarea class="form-control" name="message" placeholder="Message" rows="14"></textarea></div>
-            <div class="form-group"><button class="btn btn-primary disabled btn-block" id="asend" type="submit" disabled="" style="margin-left: 0px;">send </button></div>
+            <div class="form-group"><button class="btn btn-primary btn-block disabled" id="asend" type="submit" disabled="" style="margin-left: 0px;">send </button></div>
             <div class="form-check d-inline-block" style="padding-top: 10px;"><input class="form-check-input" type="checkbox" id="atogBtn"><label class="form-check-label text-light" for="tapa" style="font-size: 0.83em;">By continuing you agree to our <a href="Terms%20of%20Service.html">Tems of&nbsp; Service</a>&nbsp; and&nbsp; <a href="privacy%20policy.html">Privacy&nbsp; Policy</a>.&nbsp;</label></div>
         </form>
     </div>
@@ -109,7 +109,7 @@
             </div>
             <div class="row people" style="padding-top: 10px;padding-bottom: 20px;">
                 <div class="col-md-6 col-lg-4 item team-card-left">
-                    <div class="bg-dark box team-card-left"><img class="rounded-circle" src="assets/img/BXSLogo.png" style="width=250px;height=250px">
+                    <div class="bg-dark box team-card-left"><img class="rounded-circle" src="assets/img/BXS_Logo/BXSLogo.png" style="width=250px;height=250px">
                         <h3 class="name">Patrick</h3>
                         <p class="title">LEAD / Developer / Artist</p>
                         <p class="text-white-50 description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, et interdum justo suscipit id. Etiam dictum feugiat tellus, a semper massa. </p>
@@ -163,7 +163,7 @@
                     </div>
                     <div class="col item social"><a href="http://twitter.com/blaxrew"><i class="icon ion-social-twitter"></i></a><a href="https://www.youtube.com/channel/UChOC9uRCoD2-5hzFGEnnOJA"><i class="icon ion-social-youtube"></i></a><a href="http://github.com/blaxrewstudios"><i class="icon ion-social-github"></i></a><a href="https://steamcommunity.com/groups/blaxrew-studios"><i class="fab fa-steam-symbol"></i></a><a href="https://discord.com/invite/ySRCsyW"><i class="fab fa-discord"></i></a><a href="mailto:blaxrewstudios.official@gmail.com"><i class="icon ion-ios-email"></i></a></div>
                 </div>
-                <p class="copyright">BlaXrew Studios © 2015-2021</p>
+                <p class="copyright">BlaXrew Studios © 2015-2022</p>
             </div>
         </footer>
     </div>
